<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">FoodGet</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="confirmPassword">Confirmez Mot de passe</string>
    <string name="register">Inscription</string>
    <string name="login">Connexion</string>
    <string name="email">Email</string>
    <string name="firstName">Prenom</string>
    <string name="accueil">Accueil</string>
    <string name="panier">Panier</string>
    <string name="alertes">Alertes</string>
    <string name="compte">Mon Compte</string>
    <string name="oldmail">Ancienne adresse  mail</string>
    <string name="newmail">Nouvelle adresse mail</string>
    <string name="newname">Nouveau Prénom</string>
    <string name="newpass">Nouveau mot de passe</string>
    <string name="newpassconfirm">Confirmer mot de passe</string>
    <string name="oldpassword">Mot de passe actuel</string>
    <string name="welcome">"Bonjour %username% ! Vous avez dépensé %money%€ ce dernier mois"</string>
    <string name="threshold">, votre seuil est de %threshold%€</string>
    <string name="product">Produit</string>
    <string name="price">Prix</string>
    <string name="add">Ajouter</string>
    <string name="addSpentMoney">Ajouter une dépense</string>
    <string name="addShoppingProduct">Ajouter un produit à cette liste</string>
    <string name="cancel">Annuler</string>
    <string name="euroSymbol">€</string>
    <string name="setThreshold">Changer seuil</string>
    <string name="facebook_app_id">2029352413859141</string>


    <string-array name="choice_array">
        <item>24 heures</item>
        <item>1 semaine</item>
        <item>30 derniers jours</item>
    </string-array>
    <string name="NewThreshold">Nouveau Seuil</string>
</resources>
