<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:padding="40dp">

    <TextView
        android:id="@+id/product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/product" />

    <EditText
        android:id="@+id/productInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:nextFocusForward="@id/priceInput">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/productInput"
        android:layout_centerHorizontal="true"
        android:text="@string/price" />

    <EditText
        android:id="@+id/priceInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:nextFocusForward="@id/add_dataButton" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceInput"
        android:layout_centerHorizontal="true">


        <Button
            android:id="@+id/cancelButton"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/add_dataButton"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@id/cancelButton"
            android:backgroundTint="@color/green"
            android:text="@string/add" />
    </RelativeLayout>

</RelativeLayout>