<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingLeft="@dimen/fab_padding"
    android:paddingTop="@dimen/fab_padding"
    android:paddingRight="@dimen/fab_padding"
    android:paddingBottom="@dimen/fab_padding"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/foodget"
            android:layout_gravity="center"/>

        <LinearLayout
            style="@style/linearStyle"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView3"
                style="@style/textView_Style"
                android:text="@string/username" />

            <EditText
                android:id="@+id/textUser"
                style="@style/editText_style"
                android:autofillHints="@string/username"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@id/textPass" />

            <TextView
                android:id="@+id/textView4"
                style="@style/textView_Style"
                android:text="@string/password" />

            <EditText
                android:id="@+id/textPass"
                style="@style/editText_style"
                android:autofillHints="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            style="@style/buttonStyle"
            android:text="Log in"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/registerText"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15dp"
            android:text="@string/register"
            android:gravity="center"
            android:textAllCaps="true"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>